--- a/chore-door/style.css
+++ b/chore-door/style.css
@@ -36,7 +36,7 @@ body {
     padding: 10px;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
-    color: #272727;
+    color: #fd4d00;
   }
   .door-row {
     text-align: center;
