--- a/chore-door/style.css
+++ b/chore-door/style.css
@@ -13,7 +13,7 @@ body {
   }
   .instructions-title {
     display: inline;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 20px;
   color: #fd4d00;
@@ -26,16 +26,16 @@ body {
   }
   .instructions-number {
     padding: 10px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 26px;
+    font-size: 22px;
     color: #ffb800;
     background-color: #fd4d00;
   }
   .instructions-text {
     padding: 10px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
     color: #fd4d00;
   }
   .door-row {
@@ -49,7 +49,7 @@ body {
     margin: auto;
     width: 120px;
     height: 43px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #fd4d00;
     padding-top: 18px;
     font-size: 18px;
