--- a/chore-door/style.css
+++ b/chore-door/style.css
@@ -50,14 +50,30 @@ body {
     width: 120px;
     height: 50px;
     font-family: 'Montserrat', sans-serif;
-    background-color: #fd4d00;
+    background-color: rgb(253, 77, 0);
     padding-top: 18px;
     font-size: 18px;
     text-align: center;
-    color: #ffb800;
+    color: rgb(255, 184, 0);
     margin-bottom: 21px;
     cursor: pointer;
   }
   #logo {
     max-height: 95px;
   }
+  #overlay {
+    position: fixed; /* Sit on top of the page content */
+     display: none;/* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255,184,0,0.8); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
+ #girl {
+   text-align: center;
+ }
