--- a/_includes/flashcard.html
+++ b/_includes/flashcard.html
@@ -17,7 +17,7 @@
                 <div class="details-modal-title">
                 </div>
                 <div class="details-modal-content">
-                    <img alt="stroke order for {{ include.letter }}" src="{{ include.strokeSrc }}">
+                    <img alt="stroke order" src="{{ include.strokeSrc }}">
                 </div>
               </div>
         </details>
