--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,17 +4,8 @@
     </div>
     <div class="footer-link">
         <a href="mailto:{{ site.email }}" class="mail-to">{{ site.email }}</a>
-       <div>
-        <i style="font-size: 1.2rem;" class="fa-brands fa-instagram"></i>
-       </div>
-       <div>
-        <i style="font-size: 1.2rem;" class="fa-brands fa-x-twitter"></i>
-       </div>
-       <div>
-        <i style="font-size: 1.2rem;" class="fa-brands fa-dribbble"></i>
-    </div>
-    <div>
-        <i  style="font-size: 1.2rem;" class="fa-brands fa-linkedin-in"></i>
-    </div>
+        <div class="footer-sm">
+            {% include social-media-links.html %}
+        </div>
     </div>
 </footer>
