--- a/_includes/end-note.html
+++ b/_includes/end-note.html
@@ -10,7 +10,7 @@
         <div class="bottom-section">
             <div class="bottom-content">
                 <div class="bottom-content-heading">Hi, I’m Emily (エミリー)!</div>
-                <div class="content-para-2">Thank you for visiting my Japanese alphabet project. I hope this can help learning Hiragana and Katakana a bit more fun.</div>
+                <div class="content-para-2">Thank you for visiting my Pixel Japanese Alphabets project. I hope this can help learning Hiragana and Katakana more fun.</div>
                 <div class="content-para-2">If you’re curious about the behind-the-scenes of this project, don't forget to check out my blog.</div>
             </div>
         </div>
