--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -71,7 +71,9 @@
                                 I'm currently working on the <b>Pixel Japanese Alphabet</b> project. Progress: 50%.
                             </div>
                             <div class="block-bottom">
-                                <div class="button">View Hiragana</div>
+                                <div class="button-bg">
+                                    <a class="button" href="{% link hiragana.markdown %}">View Hiragana</a>
+                                </div>
                             </div>
                         </div>
                         <div class="block-2">
@@ -84,17 +86,19 @@
                                 </div>
                             </div>
                             <div class="block-mid">
-                                Follow me at <b>@emillionideas</b> for more updates
+                                Follow me at <b>@emillionideas</b> for more updates on the project
                             </div>
                             <div class="block-bottom">
-                                <div class="sm-icon">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </div>
-                                <div class="sm-icon">
-                                    <i class="fa-brands fa-x-twitter"></i>
-                                </div>
-                                <div class="sm-icon">
-                                    <i class="fa-brands fa-dribbble"></i>
+                                <div class="icon-row">
+                                    {% for entry in site.data.social-media %}
+    
+                                    <a href="{{ entry.href }}" target=”_blank” title="{{ entry.title }}">
+                                        <div class="sm-icon">
+                                            <i class="fa-brands {{ entry.fa-icon }}"></i>
+                                        </div>
+                                    </a>
+    
+                                {% endfor %}
                                 </div>
                             </div>
                         </div>
@@ -107,7 +111,7 @@
                     <div class="blog-tab">  
                         <div class="bottom-section">
                             <div class="bottom-content">
-                                <div class="content-para-2">If you're interested in working together or just want to say hello, connect with me via linkedin or send me a message via email.</div>
+                                <div class="content-para-2">If you're interested in working together or just want to say hello, connect with me via <a href="https://www.linkedin.com/in/phuc-emily-tran-a69947b6/" target="_blank" class="mail-to"><b>LinkedIn</b></a> or send me a message via email.</div>
                                 <!--<div class="button">Read article</div>-->
                
                     </div>
