--- a/_includes/end-note.html
+++ b/_includes/end-note.html
@@ -4,14 +4,14 @@
         <div class="top-section">
             <div class="top-title">endnote.md</div>
         </div>
-        <div class="mid-section">
+        <!-- <div class="mid-section">
             <div class="url">https://www.emillionideas.com/endnote/</div>
-        </div>
-        <div class="bottom-section">
+        </div> -->
+        <div class="bottom-section-end-note">
             <div class="bottom-content">
                 <div class="bottom-content-heading">Hi, I’m Emily (エミリー)!</div>
-                <div class="content-para-2">Thank you for visiting my Pixel Japanese Alphabets project. I hope this can help learning Hiragana and Katakana more fun.</div>
-                <div class="content-para-2">If you’re curious about the behind-the-scenes of this project, don't forget to check out my blog.</div>
+                <div class="content-para-2">Thank you for visiting my Pixel Japanese Alphabets project. I hope this project can help make learning Hiragana and Katakana more fun.</div>
+                <div class="content-para-2">If you’re curious about the behind-the-scenes of this project, don't forget to check out <b><a class="mail-to" href="{% link _posts/2024-01-09-pixel-japanese-alphabet.markdown %}">my blog post</a></b>.</div>
             </div>
         </div>
     
