--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
                 <div class="about-tab">
                 
                     <div class="top-section">
-                        <div class="top-title">{{ page.file_name }}</div>
+                        <div class="top-title">{{ page.title }}</div>
                     </div>
                     <div class="mid-section">
                         <div class="url">https://www.emillionideas.com/{{ page.file_name }}/</div>
