--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -16,7 +16,7 @@
                             <div class="top-title">about-me.md</div>
                         </div>
                         <div class="mid-section">
-                            <div class="url">https://www.emillionideas.com/about-me.md/</div>
+                            <div class="url">https://emillionideas.com/about/</div>
                         </div>
                         <div class="bottom-section">
                             <div class="bottom-content">
