--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,7 +17,7 @@
                     <div class="top-title">blog.md</div>
                 </div>
                 <div class="mid-section">
-                    <div class="url">https://www.emillionideas.com/blog.md/</div>
+                    <div class="url">https://emillionideas.com/blog/</div>
                 </div>
                 <div class="post-section">
                     {% for post in site.posts %}
