--- a/assets/about.css
+++ b/assets/about.css
@@ -102,6 +102,18 @@
     padding-left: 2.5rem;
     overflow: auto;
 }
+.bottom-section-end-note {
+    background-color: #F4EBD4;
+    border: solid 2px #913038;
+    border-bottom: none;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 1.8rem;
+    padding-top: 1.2rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    overflow: auto;
+}
 .bottom-content-heading {
     margin-bottom: 0;
     font-size: 2.8rem;
