--- a/assets/list.css
+++ b/assets/list.css
@@ -25,6 +25,9 @@ section {
   margin-top: 2rem;
   overflow: hidden;
 }
+.card:hover {
+  box-shadow: rgba(66, 33, 9, 0.35) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
 
 .pink { background-color: #EB97A7; }
 .purple { background-color: #C1B9E0;}
