--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
                         <div class="top-title">{{ page.title }}</div>
                     </div>
                     <div class="mid-section">
-                        <div class="url">https://www.emillionideas.com/{{ page.file_name }}/</div>
+                        <div class="url">https://www.emillionideas.com/{{ page.file_name }}</div>
                     </div>
                     <div class="bottom-section">
                         <div class="bottom-content">
