--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     {% include preamble.html title=page.title %}
+    {% include header.html %}
     <body>
         <!-- Navigation -->
         {% include site_header.html %}
@@ -86,7 +87,7 @@
                                 </div>
                             </div>
                             <div class="block-mid">
-                                Follow me at <b>@emillionideas</b> for more updates on the project
+                                Follow me on social media at <b>@emillionideas</b>
                             </div>
                             <div class="block-bottom">
                                 <div class="icon-row">
