--- a/_layouts/alphabet.html
+++ b/_layouts/alphabet.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     {% include preamble.html title=page.title %}
+    {% include header.html %}
     <body>
         <!--Navigation-->
         {% include site_header.html %}
